--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <script src="https://kit.fontawesome.com/0fb81c7629.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 
-    <title>Pokédex</title>
+    <title>Pokedex</title>
 </head>
 <body>
 
 
     <div id="my-side-nav" class="side-nav">
 
-        <a href="" id="close-side-nav" class="side-nav-exit" onclick="CloseSideNav"><i id="close-side-nav-object" class="fa-solid fa-xmark"></i></a>
+        <a href="" id="close-side-nav" class="side-nav-exit" onclick="CloseSideNav()"><i id="close-side-nav-object" class="fa-solid fa-xmark"></i></a>
 
         <div class="side-nav-title">
             <h1>POKEMON GENERATIONS</h1>
@@ -42,7 +42,7 @@
 
         <div class="menuBar">
             <img class="pokedexLogo" src="imgs/logo/pokeball.png">
-            <a class="sideNavButton" onclick="OpenSideNav()"><i class="fa-solid fa-bars fa-2x"></i></a>
+            <a href="/src/html/generation.html" class="sideNavButton" onclick="OpenSideNav()"><i class="fa-solid fa-bars fa-2x"></i></a>
         </div>
 
         <div class="mainImages">
