--- a/src/html/generation.html
+++ b/src/html/generation.html
@@ -3,9 +3,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="/src/css/generation-style.css">
+
+    <title>Pokedex</title>
 </head>
 <body>
+
+    <h1 class="generation-title">GENERATION X</h1>
+
+    <div class="pokedex">
+        <ul data-js="pokedex" class="pokedex-container">
+            <li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
+                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
+            </li>
+            <li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
+                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
+            </li>
+            <li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
+                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
+            </li>
+            <li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
+                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
+            </li>
+            <li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
+                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
+            </li>
+            <li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
+                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
+            </li>
+            <li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
+                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
+            </li>
+            <li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
+                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
+            </li>
+            <li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
+                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
+            </li>
+        </ul>
+    </div>
+
+    <script src="/main.js"></script>
     
 </body>
 </html>
