--- a/src/html/generation.html
+++ b/src/html/generation.html
@@ -14,51 +14,12 @@
 
     <div class="pokedex">
         <ul data-js="pokedex" class="pokedex-container">
-            <li class="pokemon-card">
-                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
-                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
+            <!--<li class="pokemon-card">
+                <img class="pokemon-card-image" src="/imgs/backgrounds/25.png" alt="">
+                <img class="pokemon-card-background" src="/imgs/backgrounds/pokeball_bg.png" alt="">
+                <h2 class="pokemon-card-title">PIKACHU</h2>
                 <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
-            </li>
-            <li class="pokemon-card">
-                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
-                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
-                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
-            </li>
-            <li class="pokemon-card">
-                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
-                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
-                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
-            </li>
-            <li class="pokemon-card">
-                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
-                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
-                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
-            </li>
-            <li class="pokemon-card">
-                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
-                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
-                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
-            </li>
-            <li class="pokemon-card">
-                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
-                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
-                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
-            </li>
-            <li class="pokemon-card">
-                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
-                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
-                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
-            </li>
-            <li class="pokemon-card">
-                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
-                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
-                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
-            </li>
-            <li class="pokemon-card">
-                <img class="pokemon-card-image" src="/imgs/backgrounds/generations/generation_01.jpg" alt="">
-                <h2 class="pokemon-card-title">01 EU TO MALUCO</h2>
-                <p class="pokemon-card-subtitle">GREEN | YELLOW</p>
-            </li>
+            </li>-->
         </ul>
     </div>
 
