--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="menuBar">
             <img class="pokedexLogo" src="imgs/logo/pokeball.png">
-            <a href="/src/html/generation.html" class="sideNavButton" onclick="OpenSideNav()"><i class="fa-solid fa-bars fa-2x"></i></a>
+            <a href="" class="sideNavButton" onclick="OpenSideNav()"><i class="fa-solid fa-bars fa-2x"></i></a>
         </div>
 
         <div class="mainImages">
