- final pokedex website & system

--- a/generation.html
+++ b/generation.html
@@ -1,14 +1,17 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/src/css/generation-style.css">
+    <link rel="stylesheet" href="/src/css/pokemon-details-style.css">
     <script src="https://kit.fontawesome.com/0fb81c7629.js" crossorigin="anonymous"></script>
 
     <title>Pokedex</title>
 </head>
+
 <body>
 
     <div class="side-menu-container">
@@ -33,7 +36,16 @@
 
     </div>
 
+
+
+    <section data-js="pokemon-details" class="pokemon-details-container">
+
+    </section>
+
+
+
     <script src="main.js"></script>
-    
+
 </body>
+
 </html>
