- organization of pokedex html, css & js

--- a/generation.html
+++ b/generation.html
@@ -14,8 +14,9 @@
 
 <body>
 
-    <div class="side-menu-container">
+    <!-- SIDE MENU SECTION -->
 
+    <div class="side-menu-container">
         <h1 class="generation-title" id="gen-title"></h1>
 
         <div class="search-bar">
@@ -27,11 +28,11 @@
             <ul data-js="pokedex" class="pokedex-container">
             </ul>
         </div>
-
     </div>
 
-    <section data-js="pokemon-details" class="pokemon-details-container">
+    <!-- POKEMON DETAILS SECTION -->
 
+    <section data-js="pokemon-details" class="pokemon-details-container">
     </section>
 
 
