- main screen responsivity treatment

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
         <button type="button" class="btn-close text-white m-5" data-bs-dismiss="offcanvas" aria-label="Close"><i
                 class="fa-solid fa-xmark fa-2x"></i></button>
         <div class="offcanvas-header justify-content-center">
-            <h1 class="offcanvas-title text-white" id="offcanvasRightLabel"><strong>POKEMON GENERATIONS</strong>
+            <h1 class="offcanvas-title text-center text-white" id="offcanvasRightLabel"><strong>POKEMON
+                    GENERATIONS</strong>
             </h1>
         </div>
         <div class="offcanvas-body">
@@ -112,7 +113,7 @@
             <div class="container px-4 py-5" id="custom-cards">
                 <h2 class="pb-2 border-bottom">Technologies used</h2>
 
-                <div class="row row-cols-3 row-cols-lg-3 align-items-stretch g-4 py-5">
+                <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
                     <div class="col">
                         <div class="card card-cover h-100 overflow-hidden text-white rounded-4 shadow-lg"
                             style="background-color: #E34F26;">
