- search bar funcionality fix during pc version

--- a/generation.html
+++ b/generation.html
@@ -20,7 +20,8 @@
 
         <div class="search-bar">
             <i class="fa-solid fa-magnifying-glass"></i>
-            <input type="text" placeholder="Search your favorite pokemon..." class="search-bar-input" id="search">
+            <input type="text" placeholder="Search your favorite pokemon..." class="search-bar-input"
+                id="responsive-search">
         </div>
 
         <div class="pokedex">
