- side nav button visualization fix

--- a/generation.html
+++ b/generation.html
@@ -30,8 +30,6 @@
         </div>
     </div>
 
-    <a class="sideNavButton" onclick="OpenSideNav()"><i class="fa-solid fa-bars fa-2x"></i></a>
-
     <!-- SIDE MENU SECTION -->
 
     <div class="side-menu-container">
@@ -51,6 +49,7 @@
     <!-- POKEMON DETAILS SECTION -->
 
     <section data-js="pokemon-details" class="pokemon-details-container">
+        <a class="side-nav-button" onclick="OpenSideNav()"><i class="fa-solid fa-bars fa-2x"></i></a>
     </section>
 
 
