- main page get started button responsivity fix

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             pokemon
                             and join the
                             battle!</h1>
-                        <p class="lead text-white-50">Explore through all generations and get informations
+                        <p class="lead text-white-50 lh-1">Explore through all generations and get informations
                             about the pokemons to be
                             prepared for the battle!</p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
