- website icon on pokedex page fix

--- a/generation.html
+++ b/generation.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/0fb81c7629.js" crossorigin="anonymous"></script>
 
     <title>Pokedex</title>
+    <link rel="icon" type="image/x-icon" href="/imgs/logo/pokeball.png">
 </head>
 
 <body>
